--- a/src/main/swagger/exception-model.yml
+++ b/src/main/swagger/exception-model.yml
@@ -45,7 +45,7 @@ definitions:
   RestApiException:
     description: "The serialized exception."
     type: "object"
-    discriminator: _type
+    discriminator: "_type"
     properties:
       id:
         type: "string"
@@ -57,6 +57,7 @@ definitions:
       message:
         type: "string"
         description: "A human readable exception message."
+        default: "No message present."
       errorCode:
         type: "string"
         description: "A service specific error code."
