--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,22 @@
 
   <repositories>
     <repository>
+      <id>bremersee-releases</id>
+      <name>Bremersee Releases</name>
+      <url>https://nexus.bremersee.org/repository/maven-releases</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>bremersee-snapshots</id>
+      <name>Bremersee Snapshots</name>
+      <url>https://nexus.bremersee.org/repository/maven-snapshots</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+    <repository>
       <id>spring-milestones</id>
       <name>Spring Milestones</name>
       <url>https://repo.spring.io/milestone</url>
@@ -50,6 +66,11 @@
   </dependencyManagement>
 
   <dependencies>
+    <dependency>
+      <groupId>org.bremersee</groupId>
+      <artifactId>common-xml</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
     <dependency>
       <groupId>org.bremersee</groupId>
       <artifactId>common-model-spring</artifactId>
