--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <product.vendor>bremersee.org</product.vendor>
     <inceptionYear>2019</inceptionYear>
 
-    <spring-boot.version>2.1.2.RELEASE</spring-boot.version>
+    <spring-boot.version>2.1.3.RELEASE</spring-boot.version>
     <spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
 
     <plantuml.version>1.2018.11</plantuml.version>
@@ -201,6 +201,11 @@
       <groupId>javax.validation</groupId>
       <artifactId>validation-api</artifactId>
       <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>6.0.14.Final</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
