--- a/pom.xml
+++ b/pom.xml
@@ -7,16 +7,17 @@
   <parent>
     <groupId>org.bremersee</groupId>
     <artifactId>common-parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <relativePath/>
   </parent>
 
   <artifactId>common-base</artifactId>
-  <version>1.1.0-SNAPSHOT</version>
+  <version>1.2.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>common-base</name>
   <description>Common Base</description>
+  <url>https://github.com/bremersee/common-base</url>
 
   <scm>
     <url>https://github.com/bremersee/common-base</url>
@@ -46,7 +47,7 @@
     <dependency>
       <groupId>org.bremersee</groupId>
       <artifactId>common-model</artifactId>
-      <version>1.1.0-SNAPSHOT</version>
+      <version>1.1.0</version>
     </dependency>
 
     <dependency>
