--- a/pom.xml
+++ b/pom.xml
@@ -6,18 +6,16 @@
   <parent>
     <groupId>org.bremersee</groupId>
     <artifactId>common-parent</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <relativePath/>
   </parent>
 
   <artifactId>common-base-parent</artifactId>
-  <version>1.2.0</version>
+  <version>1.2.1</version>
   <packaging>pom</packaging>
 
   <name>common-base-parent</name>
-  <description>
-    TODO
-  </description>
+  <description>Common Base Parent</description>
   <url>https://github.com/bremersee/common-base</url>
 
   <modules>
