--- a/common-base-security/pom.xml
+++ b/common-base-security/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.bremersee</groupId>
     <artifactId>common-base-parent</artifactId>
-    <version>1.4.5</version>
+    <version>1.4.6-SNAPSHOT</version>
   </parent>
 
   <artifactId>common-base-security</artifactId>
