--- a/common-base-webflux-starter/pom.xml
+++ b/common-base-webflux-starter/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <artifactId>common-base-parent</artifactId>
     <groupId>org.bremersee</groupId>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.0.1</version>
   </parent>
 
   <artifactId>common-base-webflux-starter</artifactId>
