--- a/common-base-security-starter/pom.xml
+++ b/common-base-security-starter/pom.xml
@@ -38,8 +38,20 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.bremersee</groupId>
+      <artifactId>common-base-webflux-starter</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-webflux</artifactId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.bremersee</groupId>
+      <artifactId>common-base-actuator-autoconfigure</artifactId>
+      <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
