--- a/common-base-webflux-starter/pom.xml
+++ b/common-base-webflux-starter/pom.xml
@@ -38,14 +38,13 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-actuator</artifactId>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.bremersee</groupId>
-      <artifactId>common-base-security-starter</artifactId>
-      <version>${project.version}</version>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
