--- a/common-base-security/pom.xml
+++ b/common-base-security/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <artifactId>common-base-parent</artifactId>
     <groupId>org.bremersee</groupId>
-    <version>2.1.2</version>
+    <version>2.1.3-SNAPSHOT</version>
   </parent>
 
   <artifactId>common-base-security</artifactId>
@@ -27,6 +27,10 @@
       <artifactId>json-path</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context-support</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-oauth2-client</artifactId>
