--- a/common-base-webflux/pom.xml
+++ b/common-base-webflux/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.bremersee</groupId>
     <artifactId>common-base-parent</artifactId>
-    <version>2.1.3-SNAPSHOT</version>
+    <version>2.1.3</version>
   </parent>
 
   <artifactId>common-base-webflux</artifactId>
