--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   </parent>
 
   <artifactId>common-base-parent</artifactId>
-  <version>2.1.3-SNAPSHOT</version>
+  <version>2.1.3</version>
   <packaging>pom</packaging>
 
   <name>common-base-parent</name>
