--- a/common-base-autoconfigure/pom.xml
+++ b/common-base-autoconfigure/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <artifactId>common-base-parent</artifactId>
     <groupId>org.bremersee</groupId>
-    <version>2.1.4-SNAPSHOT</version>
+    <version>2.1.4</version>
   </parent>
 
   <artifactId>common-base-autoconfigure</artifactId>
