--- a/common-base-minio/pom.xml
+++ b/common-base-minio/pom.xml
@@ -106,9 +106,21 @@
         </exclusion>
       </exclusions>
     </dependency>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.playtika.testcontainers</groupId>
+      <artifactId>embedded-minio</artifactId>
+      <version>1.62</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
