--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
   <parent>
     <groupId>org.bremersee</groupId>
     <artifactId>common-parent</artifactId>
-    <version>2.0.4-SNAPSHOT</version>
+    <version>2.1.0-SNAPSHOT</version>
     <relativePath/>
   </parent>
 
   <artifactId>common-base-parent</artifactId>
-  <version>2.1.5-SNAPSHOT</version>
+  <version>2.2.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>common-base-parent</name>
@@ -49,7 +49,7 @@
     <github.repo>common-base</github.repo>
     <!--suppress UnresolvedMavenProperty -->
     <gh-pages-staging-dir>${maven.multiModuleProjectDirectory}/target/staging</gh-pages-staging-dir>
-    <common-model.version>2.0.1</common-model.version>
+    <common-model.version>2.1.0-SNAPSHOT</common-model.version>
   </properties>
 
   <scm>
